[project]
name = "gpt-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Ishaan Sen",email = "ishaan.sen100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "openai (>=1.72.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pigpio (>=1.78,<2.0)",
    "scipy (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
